--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -5,7 +5,7 @@
     <title>List</title>
 </head>
 <body>
-<h1>user List</h1>
+<h1>User List</h1>
 <a href="/create-user">Create new user</a>
 <table border="1" style="background-color: lightgray">
     <tr>
