--- a/src/main/resources/templates/giaodien/checkout.html
+++ b/src/main/resources/templates/giaodien/checkout.html
@@ -285,36 +285,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li> </li>
 					<div class="clearfix"> </div>
 				</ul>
-				<ul class="cart-header">
-					<div class="close1"> </div>
-						<li class="ring-in"><a href="single.html" ><img src="images/c-1.jpg" class="img-responsive" alt=""></a>
-						</li>
-						<li><span class="name">Analog Watches</span></li>
-						<li><span class="cost">$ 290.00</span></li>
-						<li><span>Free</span>
-						<p>Delivered in 2-3 business days</p></li>
-					<div class="clearfix"> </div>
-				</ul>
-				<ul class=" cart-header1">
-					<div class="close2"> </div>
-						<li class="ring-in"><a href="single.html" ><img src="images/c-2.jpg" class="img-responsive" alt=""></a>
-						</li>
-						<li><span class="name">Analog Watches</span></li>
-						<li><span class="cost">$ 300.00</span></li>
-						<li><span>Free</span>
-						<p>Delivered in 2-3 business days</p></li>
-						<div class="clearfix"> </div>
-				</ul>
-				<ul class="cart-header2">
-					<div class="close3"> </div>
-						<li class="ring-in"><a href="single.html" ><img src="images/c-3.jpg" class="img-responsive" alt=""></a>
-						</li>
-						<li><span class="name">Analog Watches</span></li>
-						<li><span class="cost">$ 360.00</span></li>
-						<li><span>Free</span>
-						<p>Delivered in 2-3 business days</p></li>
-						<div class="clearfix"> </div>
-				</ul>
+				<!--<ul class="cart-header">-->
+					<!--<div class="close1"> </div>-->
+						<!--<li class="ring-in"><a href="single.html" ><img src="images/c-1.jpg" class="img-responsive" alt=""></a>-->
+						<!--</li>-->
+						<!--<li><span class="name">Analog Watches</span></li>-->
+						<!--<li><span class="cost">$ 290.00</span></li>-->
+						<!--<li><span>Free</span>-->
+						<!--<p>Delivered in 2-3 business days</p></li>-->
+					<!--<div class="clearfix"> </div>-->
+				<!--</ul>-->
+				<!--<ul class=" cart-header1">-->
+					<!--<div class="close2"> </div>-->
+						<!--<li class="ring-in"><a href="single.html" ><img src="images/c-2.jpg" class="img-responsive" alt=""></a>-->
+						<!--</li>-->
+						<!--<li><span class="name">Analog Watches</span></li>-->
+						<!--<li><span class="cost">$ 300.00</span></li>-->
+						<!--<li><span>Free</span>-->
+						<!--<p>Delivered in 2-3 business days</p></li>-->
+						<!--<div class="clearfix"> </div>-->
+				<!--</ul>-->
+				<!--<ul class="cart-header2">-->
+					<!--<div class="close3"> </div>-->
+						<!--<li class="ring-in"><a href="single.html" ><img src="images/c-3.jpg" class="img-responsive" alt=""></a>-->
+						<!--</li>-->
+						<!--<li><span class="name">Analog Watches</span></li>-->
+						<!--<li><span class="cost">$ 360.00</span></li>-->
+						<!--<li><span>Free</span>-->
+						<!--<p>Delivered in 2-3 business days</p></li>-->
+						<!--<div class="clearfix"> </div>-->
+				<!--</ul>-->
 			</div>
 			</div>  
 		 </div>
