--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -43,39 +43,39 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="http://www.creative-tim.com" class="simple-text">
-                    Creative Tim
+                    ADMIN
                 </a>
             </div>
 
             <ul class="nav">
                 <li>
-                    <a href="/bills">
+                    <a href="bills">
                         <i class="pe-7s-graph"></i>
                         <p>Tổng Quan</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/users">
+                    <a href="users">
                         <i class="pe-7s-user"></i>
                         <p>Quản Trị Thành Viên</p>
                     </a>
                 </li>
                 <li class="active">
-                    <a  href="/products">
+                    <a  href="products">
                         <i class="pe-7s-note2"></i>
                         <p>Quản Lý Sản Phẩm</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/customers">
+                    <a href="producers">
                         <i class="pe-7s-news-paper"></i>
-                        <p>Quản Trị Khách Hàng</p>
+                        <p>Quản Trị Nhà Sản Xuất</p>
                     </a>
                 </li>
                 <li>
-                    <a href="icons.html">
+                    <a href="productTypes">
                         <i class="pe-7s-science"></i>
-                        <p>Icons</p>
+                        <p>Quản Trị Loại Đồng Hồ</p>
                     </a>
                 </li>
                 <li>
@@ -90,12 +90,12 @@
                         <p>Notifications</p>
                     </a>
                 </li>
-                <li class="active-pro">
-                    <a href="upgrade.html">
-                        <i class="pe-7s-rocket"></i>
-                        <p>Upgrade to PRO</p>
-                    </a>
-                </li>
+                <!--<li class="active-pro">-->
+                    <!--<a href="upgrade.html">-->
+                        <!--<i class="pe-7s-rocket"></i>-->
+                        <!--<p>Upgrade to PRO</p>-->
+                    <!--</a>-->
+                <!--</li>-->
             </ul>
         </div>
     </div>
@@ -110,67 +110,67 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Table List</a>
+                    <!--<a class="navbar-brand" href="#">Table List</a>-->
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-dashboard"></i>
-                                <p class="hidden-lg hidden-md">Dashboard</p>
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-globe"></i>
-                                <b class="caret hidden-sm hidden-xs"></b>
-                                <span class="notification hidden-sm hidden-xs">5</span>
-                                <p class="hidden-lg hidden-md">
-                                    5 Notifications
-                                    <b class="caret"></b>
-                                </p>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Notification 1</a></li>
-                                <li><a href="#">Notification 2</a></li>
-                                <li><a href="#">Notification 3</a></li>
-                                <li><a href="#">Notification 4</a></li>
-                                <li><a href="#">Another notification</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="">
-                                <i class="fa fa-search"></i>
-                                <p class="hidden-lg hidden-md">Search</p>
-                            </a>
-                        </li>
+                        <!--<li>-->
+                            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                                <!--<i class="fa fa-dashboard"></i>-->
+                                <!--<p class="hidden-lg hidden-md">Dashboard</p>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li class="dropdown">-->
+                            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                                <!--<i class="fa fa-globe"></i>-->
+                                <!--<b class="caret hidden-sm hidden-xs"></b>-->
+                                <!--<span class="notification hidden-sm hidden-xs">5</span>-->
+                                <!--<p class="hidden-lg hidden-md">-->
+                                    <!--5 Notifications-->
+                                    <!--<b class="caret"></b>-->
+                                <!--</p>-->
+                            <!--</a>-->
+                            <!--&lt;!&ndash;<ul class="dropdown-menu">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<li><a href="#">Notification 1</a></li>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<li><a href="#">Notification 2</a></li>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<li><a href="#">Notification 3</a></li>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<li><a href="#">Notification 4</a></li>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<li><a href="#">Another notification</a></li>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="">-->
+                                <!--<i class="fa fa-search"></i>-->
+                                <!--<p class="hidden-lg hidden-md">Search</p>-->
+                            <!--</a>-->
+                        <!--</li>-->
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="">
-                                <p>Account</p>
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <p>
-                                    Dropdown
-                                    <b class="caret"></b>
-                                </p>
+                        <!--<li>-->
+                            <!--<a href="">-->
+                                <!--<p>Account</p>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li class="dropdown">-->
+                            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                                <!--<p>-->
+                                    <!--Dropdown-->
+                                    <!--<b class="caret"></b>-->
+                                <!--</p>-->
 
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </li>
-                        <li>
+                            <!--</a>-->
+                            <!--<ul class="dropdown-menu">-->
+                                <!--<li><a href="#">Action</a></li>-->
+                                <!--<li><a href="#">Another action</a></li>-->
+                                <!--<li><a href="#">Something</a></li>-->
+                                <!--<li><a href="#">Another action</a></li>-->
+                                <!--<li><a href="#">Something</a></li>-->
+                                <!--<li class="divider"></li>-->
+                                <!--<li><a href="#">Separated link</a></li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <li style="text-align: right">
                             <a href="#">
                                 <p>Log out</p>
                             </a>
@@ -193,7 +193,7 @@
                                     <input type="text" name="s">
                                     <input type="submit" value="Search">
                                     <p>
-                                        <a href="/create-product">Thêm Sản Phẩm</a>
+                                        <a th:href="@{create-product}">Thêm Sản Phẩm</a>
                                     </p>
                                 </form><br/>
                             </div>
@@ -203,6 +203,7 @@
                                     <th>STT</th>
                                     <th>ID</th>
                                     <th>Tên</th>
+                                    <th>Ảnh</th>
                                     <th>Màu Sắc</th>
                                     <th>Kiểu Máy</th>
                                     <th>Kích Cỡ</th>
@@ -216,22 +217,23 @@
                                     <th>Xóa</th>
                                     </thead>
                                     <tbody>
-                                    <th:block th:each="product, istart : ${products}">
+                                    <th:block th:each="image, istart : ${listImages}">
                                         <tr>
                                             <td th:text="${istart.index + 1}"></td>
-                                            <td th:text="${product.id}"></td>
-                                            <td th:text="${product.name}"></td>
-                                            <td th:text="${product.color}"></td>
-                                            <td th:text="${product.machineType}"></td>
-                                            <td th:text="${product.size}"></td>
-                                            <td th:text="${product.materialShell}"></td>
-                                            <td th:text="${product.waterproof}"></td>
-                                            <td th:text="${product.faceGlass}"></td>
-                                            <td th:text="${product.unitPrice}"></td>
-                                            <td th:text="${product.idType}"></td>
-                                            <td th:text="${product.idProducer}"></td>
-                                            <td><a th:href="@{/edit-product/__${product.id}__ }">Sửa</a></td>
-                                            <td><a th:href="@{/delete-product/__${product.id}__ }">Xóa</a></td>
+                                            <td th:text="${image.product.id}"></td>
+                                            <td th:text="${image.product.name}"></td>
+                                            <td><img th:src="@{/resources/__${image.url}__}" height="100px" width="100px"></td>
+                                            <td th:text="${image.product.color}"></td>
+                                            <td th:text="${image.product.machineType}"></td>
+                                            <td th:text="${image.product.size}"></td>
+                                            <td th:text="${image.product.materialShell}"></td>
+                                            <td th:text="${image.product.waterproof}"></td>
+                                            <td th:text="${image.product.faceGlass}"></td>
+                                            <td th:text="${image.product.unitPrice}"></td>
+                                            <td th:text="${image.product.productType.name}"></td>
+                                            <td th:text="${image.product.producer.name}"></td>
+                                            <td><a th:href="@{edit-product/__${image.product.id}__ }">Sửa</a></td>
+                                            <td><a th:href="@{delete-product/__${image.product.id}__ }">Xóa</a></td>
                                         </tr>
                                     </th:block>
                                     </tbody>
